--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,10 @@
         <div class="board-container">
         </div>
     </center>
+
+    <div id="statusContainer">
+        <p id="status"></p>
+    </div>
     <script src="./bootstrap.js"></script>
 </body>
 
